Split in three sets of artifacts for better re-usability, and started adding scripted tests.